--- a/index.htm
+++ b/index.htm
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <title>IMC</title>
     <link rel="stylesheet" href="css/estilo.css">
 </head>
@@ -32,10 +33,11 @@
             <div class="box">
                 <label for="sexo">Choose a car:</label>
 
-                <select name="sexo" id="sexo">
-                  <option value="masculino">Masculino</option>
-                  <option value="feminino">Feminino</option>
-                </select>
+                <select class="form-select" aria-label="Default select example" name="sexo" id="sexo">
+                    <option selected>Selecione seu sexo</option>
+                    <option value="masculino">Masculino</option>
+                    <option value="feminino">Feminino</option>
+                    </select>
             </div>
 
             <button id='calcular'>Calcular</button>
