--- a/index.htm
+++ b/index.htm
@@ -54,7 +54,7 @@
             <a href="#"> PEDRO</a>
         </p>
     </footer>
-    <script src="js/script.js"></script>
+    <script src="script.js"></script>
 </body>
 
 </html>
