--- a/index.htm
+++ b/index.htm
@@ -4,10 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    
+
     <title>IMC</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="estilo.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 
 <body>
@@ -31,11 +31,13 @@
                 <input placeholder="Insira sua altura em metros" type="number" id='altura' required="required">
             </div>
 
-                <select class="form-select" aria-label="Default select example" name="sexo" id="sexo">
+
+            <select class="form-select" aria-label="Default select example" name="sexo" id="sexo">
                     <option selected>Selecione seu sexo</option>
                     <option value="masculino">Masculino</option>
                     <option value="feminino">Feminino</option>
                     </select>
+
 
             <button id='calcular'>Calcular</button>
             <!-- <input class="limpar" type="reset" name="limpar" value="Limpar"> -->
