--- a/index.htm
+++ b/index.htm
@@ -7,7 +7,7 @@
 
     <title>IMC</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel="stylesheet" href="estilo.css">
+    <link rel="stylesheet" href="css/estilo.css">
 </head>
 
 <body>
@@ -31,13 +31,10 @@
                 <input placeholder="Insira sua altura em metros" type="number" id='altura' required="required">
             </div>
 
+            <div class="input">
 
-            <select class="form-select" aria-label="Default select example" name="sexo" id="sexo">
-                    <option selected>Selecione seu sexo</option>
-                    <option value="masculino">Masculino</option>
-                    <option value="feminino">Feminino</option>
-                    </select>
-
+                <input placeholder="Insira o seu sexo (M ou F)" type="text" id='sexo' required="required">
+            </div>
 
             <button id='calcular'>Calcular</button>
             <!-- <input class="limpar" type="reset" name="limpar" value="Limpar"> -->
@@ -52,7 +49,7 @@
             <a href="#"> PEDRO</a>
         </p>
     </footer>
-    <script src="script.js"></script>
+    <script src="js/script.js"></script>
 </body>
 
 </html>
